create aside bar.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mid-Term Project</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./css/fonts.css">
 </head>
 <body>
-    
+    <div class="main-container">
+        <aside class="aside">
+            <div class="aside-mainBox">
+                <div class="aside-title flex">
+                    <h3>design.<span>today</span></h3>
+                    <div class="burger">
+                        <div class="divider"></div>
+                        <div class="divider"></div>
+                        <div class="divider"></div>
+                    </div>
+                </div>
+                <div class="aside-nav-div">
+                    <nav class="aside-nav">
+                        <ul class="aside-nav-ul">
+                            <li class="aside-nav-li active">
+                                <a href="index.html" class="aside-nav-a">
+                                    <img src="./images/homeIcon.png" alt="Home Icon">
+                                    <h6>Home</h6>
+                                </a>
+                            </li>
+                            <li class="aside-nav-li">
+                                <a href="#" class="aside-nav-a">
+                                    <img src="./images/exploreIcon.png" alt="Explore Icon">
+                                    <h6>Explore</h6>
+                                </a>
+                            </li>
+                            <li class="aside-nav-li">
+                                <a href="#" class="aside-nav-a">
+                                    <img src="./images/folderIcon.png" alt="Folder Icon">
+                                    <h6>Folders</h6>
+                                </a>
+                            </li>
+                            <li class="aside-nav-li">
+                                <a href="#" class="aside-nav-a">
+                                    <img src="./images/favouritesIcon.png" alt="Favourites Icon">
+                                    <h6>Favourites</h6>
+                                </a>
+                            </li>
+                            <li class="aside-nav-li">
+                                <a href="#" class="aside-nav-a">
+                                    <img src="./images/activitiesIcon.png" alt="Activities Icon">
+                                    <h6>Activities</h6>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="aside-following-box">
+                    <h6>FOLLOWING</h6>
+                    <ul class="following-ul">
+                        <li class="following-li">
+                            <a href="#" class="aside-following-a">
+                                <img src="./images/following1.png" alt="first following photo">
+                                <h6>Sajon</h6>
+                            </a>
+                        </li>
+                        <li class="following-li">
+                            <a href="#" class="aside-following-a">
+                                <img src="./images/following2.png" alt="second following photo">
+                                <h6>Tran Mau Tri Tam </h6>
+                            </a>
+                        </li>
+                        <li class="following-li">
+                            <a href="#" class="aside-following-a">
+                                <img src="./images/following3.png" alt="third following photo">
+                                <h6>Ghani Pradita</h6>
+                            </a>
+                        </li>
+                        <li class="following-li">
+                            <a href="#" class="aside-following-a">
+                                <img src="./images/following4.png" alt="forth following photo">
+                                <h6>David Kovalev</h6>
+                            </a>
+                        </li>
+                        <li class="following-li">
+                            <a href="#" class="aside-following-a">
+                                <img src="./images/following5.png" alt="fifth following photo">
+                                <h6>Ryan Putnam</h6>
+                            </a>
+                        </li>
+                    </ul>
+                    <a class="loadMore" href="#">Load more (15)</a>
+                </div>
+            </div>
+        </aside>
+        <main class="main">a</main>
+    </div>
 </body>
 </html>
