--- a/index.html
+++ b/index.html
@@ -93,7 +93,49 @@
                 </div>
             </div>
         </aside>
-        <main class="main">a</main>
+        <main class="main">
+            <header class="header">
+                <div class="container container-flex">
+                    <div class="search-box">
+                        <input type="text" placeholder="Search inspiration">
+                        <a href="#">
+                            <img src="./images/searchIcon.png" alt="search icon">
+                        </a>
+                    </div>
+                    <nav class="nav">
+                        <ul class="nav-ul">
+                            <li class="nav-li first">
+                                <a href="#" class="nav-a">
+                                    GO PRO!
+                                </a>
+                            </li>
+                            <li class="nav-li">
+                                <a href="#" class="nav-a relative">
+                                    <img src="./images/messageIcon.png" alt="message icon">
+                                    <img class="absolute allipse" src="./images/ellipse.png" alt="elipse icon">
+                                </a>
+                            </li>
+                            <li class="nav-li">
+                                <a href="#" class="nav-a relative">
+                                    <img src="./images/ringIcon.png" alt="ring icon">
+                                    <img class="absolute allipse-second" src="./images/ellipse.png" alt="elipse icon">
+                                </a>
+                            </li>
+                            <li class="nav-li">
+                                <a href="#" class="nav-a">
+                                    <img src="./images/profilePhoto.png" alt="profile image">
+                                </a>
+                            </li>
+                            <li class="nav-li last">
+                                <a href="#" class="nav-a">
+                                    Upload
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </header>
+        </main>
     </div>
 </body>
 </html>
