add header responsive.

--- a/index.html
+++ b/index.html
@@ -109,29 +109,36 @@
                                     GO PRO!
                                 </a>
                             </li>
-                            <li class="nav-li">
-                                <a href="#" class="nav-a relative">
-                                    <img src="./images/messageIcon.png" alt="message icon">
-                                    <img class="absolute allipse" src="./images/ellipse.png" alt="elipse icon">
-                                </a>
-                            </li>
-                            <li class="nav-li">
-                                <a href="#" class="nav-a relative">
-                                    <img src="./images/ringIcon.png" alt="ring icon">
-                                    <img class="absolute allipse-second" src="./images/ellipse.png" alt="elipse icon">
-                                </a>
-                            </li>
-                            <li class="nav-li">
-                                <a href="#" class="nav-a">
-                                    <img src="./images/profilePhoto.png" alt="profile image">
-                                </a>
-                            </li>
-                            <li class="nav-li last">
-                                <a href="#" class="nav-a">
-                                    Upload
-                                </a>
-                            </li>
+                            <div class="nav-right">
+                                <li class="nav-li">
+                                    <a href="#" class="nav-a relative">
+                                        <img src="./images/messageIcon.png" alt="message icon">
+                                        <img class="absolute allipse" src="./images/ellipse.png" alt="elipse icon">
+                                    </a>
+                                </li>
+                                <li class="nav-li">
+                                    <a href="#" class="nav-a relative">
+                                        <img src="./images/ringIcon.png" alt="ring icon">
+                                        <img class="absolute allipse-second" src="./images/ellipse.png" alt="elipse icon">
+                                    </a>
+                                </li>
+                                <li class="nav-li">
+                                    <a href="#" class="nav-a">
+                                        <img src="./images/profilePhoto.png" alt="profile image">
+                                    </a>
+                                </li>
+                                <li class="nav-li last">
+                                    <a href="#" class="nav-a">
+                                        Upload
+                                    </a>
+                                </li>
+                            </div>
                         </ul>
+                        <div class="nav-burger">
+                            <div class="nav-divider"></div>
+                            <div class="nav-divider"></div>
+                            <div class="nav-divider"></div>
+                        </div>
                     </nav>
                 </div>
             </header>
