--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     GO PRO!
                                 </a>
                             </li>
-                            <div class="nav-right">
+                            <ul class="nav-right">
                                 <li class="nav-li">
                                     <a href="#" class="nav-a relative">
                                         <img src="./images/messageIcon.png" alt="message icon">
@@ -132,7 +132,7 @@
                                         Upload
                                     </a>
                                 </li>
-                            </div>
+                            </ul>
                         </ul>
                         <div class="nav-burger">
                             <div class="nav-divider"></div>
