--- a/index.html
+++ b/index.html
@@ -228,6 +228,64 @@
                     <button class="article-btn">Load more</button>
                 </div>
             </section>
+            <section class="designers-box">
+                <div class="container designers-container-div">
+                    <div class="designers-box-title flex">
+                        <h4>Top Designers</h4>
+                        <h6>View all</h6>
+                    </div>
+                    <div class="designers-div flex">
+                        <article class="designers-article">
+                            <img src="./images/designers1.png" alt="first designer image">
+                            <h5>Tran Mau Tri Tam </h5>
+                            <h6>Sai Gon, Vietnam</h6>
+                            <button class="following">Following</button>
+                        </article>
+                        <article class="designers-article">
+                            <img src="./images/designers2.png" alt="second designer image">
+                            <h5>Ghulam Rasool</h5>
+                            <h6>Dubai</h6>
+                            <button>Follow</button>
+                        </article>
+                        <article class="designers-article">
+                            <img src="./images/designers3.png" alt="third designer image">
+                            <h5>Zhenya Rynzhuk</h5>
+                            <h6>New York City, NY</h6>
+                            <button>Follow</button>
+                        </article>
+                        <article class="designers-article">
+                            <img src="./images/designers4.png" alt="forth designer photo">
+                            <h5>Ghani Pradita</h5>
+                            <h6>Yogyakarta, Indonesia</h6>
+                            <button>Follow</button>
+                        </article>
+                        <article class="designers-article">
+                            <img src="./images/designers5.png" alt="fifth designers image">
+                            <h5>Sajon Sajon</h5>
+                            <h6>Earth</h6>
+                            <button class="following">Following</button>
+                        </article>
+                        <article class="designers-article">
+                            <img src="./images/designers6.png" alt="sixth designers image">
+                            <h5>David Kovalev</h5>
+                            <h6>Sarasota, FL</h6>
+                            <button>Follow</button>
+                        </article>
+                        <article class="designers-article">
+                            <img src="./images/designers7.png" alt="seventh designers image">
+                            <h5>Ryan Putnam</h5>
+                            <h6>Colorado Springs</h6>
+                            <button>Follow</button>
+                        </article>
+                        <article class="designers-article">
+                            <img src="./images/designers8.png" alt="eighth designers image">
+                            <h5>Dmitry Lauretsky</h5>
+                            <h6>Omsk, Russia</h6>
+                            <button>Follow</button>
+                        </article>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
 </body>
