create list section.

--- a/index.html
+++ b/index.html
@@ -286,6 +286,183 @@
                     </div>
                 </div>
             </section>
+            <section class="list-section">
+                <div class="container listBox-mainDiv flex">
+                    <div class="list-box">
+                        <h6>For designers</h6>
+                        <ul class="list-box-ul">
+                            <li class="list-box-li">
+                                <a href="#" class="list-box-a">
+                                    Go Pro!
+                                </a>
+                            </li>
+                            <li class="list-box-li">
+                                <a href="#" class="list-box-a">
+                                    Explore design work
+                                </a>
+                            </li>
+                            <li class="list-box-li">
+                                <a href="#" class="list-box-a">
+                                    Design blog
+                                </a>
+                            </li>
+                            <li class="list-box-li">
+                                <a href="#" class="list-box-a">
+                                    Overtime podcast
+                                </a>
+                            </li>
+                            <li class="list-box-li">
+                                <a href="#" class="list-box-a">
+                                    Dribbble meetups
+                                </a>
+                            </li>
+                            <li class="list-box-li">
+                                <a href="#" class="list-box-a">
+                                    Playoffs
+                                </a>
+                            </li>
+                            <li class="list-box-li">
+                                <a href="#" class="list-box-a">
+                                    Weekly Warm-Up
+                                </a>
+                            </li>
+                            <li class="list-box-li">
+                                <a href="#" class="list-box-a">
+                                    Code of conduct
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="list-box">
+                        <h6>Hire designers</h6>
+                        <ul class="list-box-ul">
+                            <li class="list-box-li">
+                                <ul class="inside-box-ul">
+                                    <li class="inside-box-li">
+                                        <a href="#" class="inside-box-a">
+                                            Post a job opening
+                                        </a>
+                                    </li>
+                                    <li class="inside-box-li">
+                                        <a href="#" class="inside-box-a">
+                                            Post a freelance project
+                                        </a>
+                                    </li>
+                                    <li class="inside-box-li">
+                                        <a href="#" class="inside-box-a">
+                                            Search for designers
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="list-box-li inside-margin">
+                                <a href="" class="list-box-a">
+                                    Brands
+                                </a>
+                            </li>
+                            <li class="list-box-li">
+                                <a href="" class="list-box-a">
+                                    Advertise with us
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="list-box">
+                        <h6>Company</h6>
+                        <ul class="list-box-ul">
+                            <li class="list-box-li">
+                                <a href="#" class="list-box-a">
+                                    About
+                                </a>
+                            </li>
+                            <li class="list-box-li">
+                                <a href="#" class="list-box-a">
+                                    Careers
+                                </a>
+                            </li>
+                            <li class="list-box-li">
+                                <a href="#" class="list-box-a">
+                                    Support
+                                </a>
+                            </li>
+                            <li class="list-box-li">
+                                <a href="#" class="list-box-a">
+                                    Media kit
+                                </a>
+                            </li>
+                            <li class="list-box-li">
+                                <a href="#" class="list-box-a">
+                                    Dribbble shop
+                                </a>
+                            </li>
+                            <li class="list-box-li">
+                                <a href="#" class="list-box-a">
+                                    Testimonials
+                                </a>
+                            </li>
+                            <li class="list-box-li">
+                                <a href="#" class="list-box-a">
+                                    API
+                                </a>
+                            </li>
+                            <li class="list-box-li">
+                                <a href="#" class="list-box-a">
+                                    Terms of service
+                                </a>
+                            </li>
+                            <li class="list-box-li">
+                                <a href="#" class="list-box-a">
+                                    Privacy policy
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="list-box">
+                        <h6>Directories</h6>
+                        <ul class="list-box-ul">
+                            <li class="list-box-li">
+                                <ul class="inside-box-ul">
+                                    <li class="inside-box-li">
+                                        <a href="#" class="inside-box-a">
+                                            Top designers
+                                        </a>
+                                    </li>
+                                    <li class="inside-box-li">
+                                        <a href="#" class="inside-box-a">
+                                            Top design teams
+                                        </a>
+                                    </li>
+                                    <li class="inside-box-li">
+                                        <a href="#" class="inside-box-a">
+                                            Design jobs
+                                        </a>
+                                    </li>
+                                    <li class="inside-box-li">
+                                        <a href="#" class="inside-box-a">
+                                            Tags
+                                        </a>
+                                    </li>
+                                    <li class="inside-box-li">
+                                        <a href="#" class="inside-box-a">
+                                            Places
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="list-box-li inside-margin">
+                                <a href="#" class="list-box-a">
+                                    Design assets
+                                </a>
+                            </li>
+                            <li class="list-box-li">
+                                <a href="#" class="list-box-a">
+                                    Shop Creative Market
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
         </main>
     </div>
 </body>
