--- a/index.html
+++ b/index.html
@@ -463,6 +463,32 @@
                     </div>
                 </div>
             </section>
+            <footer class="footer">
+                <div class="container footer-div flex">
+                    <div class="social-icons">
+                        <ul class="social-ul flex">
+                            <li class="social-li">
+                                <a target="_blank" class="social-a" href="https://www.facebook.com/">
+                                    <img class="social-img" src="./images/facebook.png" alt="facebook icon">
+                                </a>
+                            </li>
+                            <li class="social-li">
+                                <a target="_blank" class="social-a" href="https://www.instagram.com/">
+                                    <img class="social-img" src="./images/instagram.png" alt="instagram icon">
+                                </a>
+                            </li>
+                            <li class="social-li last">
+                                <a target="_blank" class="social-a" href="https://twitter.com/">
+                                    <img class="social-img" src="./images/twitter.png" alt="twitter icon">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer-logo">
+                        <h4>For <span>Smartacademy</span></h4>
+                    </div>
+                </div>
+            </footer>
         </main>
     </div>
 </body>
