add header and aside responsive styles.

--- a/index.html
+++ b/index.html
@@ -134,6 +134,11 @@
                                 </li>
                             </ul>
                         </ul>
+                        <div class="profile-box">
+                            <a href="secondPage.html">
+                                <img src="./images/profilePhoto.png" alt="profile image">
+                            </a>
+                        </div>
                         <div class="nav-burger">
                             <div class="nav-divider"></div>
                             <div class="nav-divider"></div>
