add responsive styles and add font files.

--- a/secondPage.html
+++ b/secondPage.html
@@ -124,7 +124,7 @@
                                 </li>
                                 <li class="nav-li">
                                     <a href="secondPage.html" class="nav-a">
-                                        <img class="profile-img" src="./images/prifileIcon.png" alt="profile image">
+                                        <img src="./images/profilePhoto.png" alt="profile image">
                                     </a>
                                 </li>
                                 <li class="nav-li last">
@@ -134,6 +134,11 @@
                                 </li>
                             </ul>
                         </ul>
+                        <div class="profile-box">
+                            <a href="secondPage.html">
+                                <img src="./images/profilePhoto.png" alt="profile image">
+                            </a>
+                        </div>
                         <div class="nav-burger">
                             <div class="nav-divider"></div>
                             <div class="nav-divider"></div>
@@ -153,78 +158,97 @@
                                 <th>Price</th>
                                 <th>Quantity</th>
                                 <th>Total</th>
+                                <td class="icon">Product Details</td>
                             </tr>
                             <tr class="table-tr product-tr">
                                 <td>2020-09-29 95:57</td>
                                 <td>200398</td>
-                                <td>iPhone X 64Gb Grey</td>
+                                <td class="for-responsive">iPhone X 64Gb Grey</td>
+                                <td class="responsive-td">iPhone X</td>
                                 <td>$ 999.00</td>
                                 <td>1</td>
                                 <td>$ 999.00</td>
+                                <td class="icon">More Product Details</td>
                             </tr>
                             <tr class="table-tr product-tr">
                                 <td>2020-09-29 95:57</td>
                                 <td>200398</td>
-                                <td>iPhone X 64Gb Grey</td>
+                                <td class="for-responsive">iPhone X 64Gb Grey</td>
+                                <td class="responsive-td">iPhone X</td>
                                 <td>$ 999.00</td>
                                 <td>1</td>
                                 <td>$ 999.00</td>
+                                <td class="icon">More Product Details</td>
                             </tr>
                             <tr class="table-tr product-tr">
                                 <td>2020-09-29 95:57</td>
                                 <td>200398</td>
-                                <td>iPhone X 64Gb Grey</td>
+                                <td class="for-responsive">iPhone X 64Gb Grey</td>
+                                <td class="responsive-td">iPhone X</td>
                                 <td>$ 999.00</td>
                                 <td>1</td>
                                 <td>$ 999.00</td>
+                                <td class="icon">More Product Details</td>
                             </tr>
                             <tr class="table-tr product-tr">
                                 <td>2020-09-29 95:57</td>
                                 <td>200398</td>
-                                <td>iPhone X 64Gb Grey</td>
+                                <td class="for-responsive">iPhone X 64Gb Grey</td>
+                                <td class="responsive-td">iPhone X</td>
                                 <td>$ 999.00</td>
                                 <td>1</td>
                                 <td>$ 999.00</td>
+                                <td class="icon">More Product Details</td>
                             </tr>
                             <tr class="table-tr product-tr">
                                 <td>2020-09-29 95:57</td>
                                 <td>200398</td>
-                                <td>iPhone X 64Gb Grey</td>
+                                <td class="for-responsive">iPhone X 64Gb Grey</td>
+                                <td class="responsive-td">iPhone X</td>
                                 <td>$ 999.00</td>
                                 <td>1</td>
                                 <td>$ 999.00</td>
+                                <td class="icon">More Product Details</td>
                             </tr>
                             <tr class="table-tr product-tr">
                                 <td>2020-09-29 95:57</td>
                                 <td>200398</td>
-                                <td>iPhone X 64Gb Grey</td>
+                                <td class="for-responsive">iPhone X 64Gb Grey</td>
+                                <td class="responsive-td">iPhone X</td>
                                 <td>$ 999.00</td>
                                 <td>1</td>
                                 <td>$ 999.00</td>
+                                <td class="icon">More Product Details</td>
                             </tr>
                             <tr class="table-tr product-tr">
                                 <td>2020-09-29 95:57</td>
                                 <td>200398</td>
-                                <td>iPhone X 64Gb Grey</td>
+                                <td class="for-responsive">iPhone X 64Gb Grey</td>
+                                <td class="responsive-td">iPhone X</td>
                                 <td>$ 999.00</td>
                                 <td>1</td>
                                 <td>$ 999.00</td>
+                                <td class="icon">More Product Details</td>
                             </tr>
                             <tr class="table-tr product-tr">
                                 <td>2020-09-29 95:57</td>
                                 <td>200398</td>
-                                <td>iPhone X 64Gb Grey</td>
+                                <td class="for-responsive">iPhone X 64Gb Grey</td>
+                                <td class="responsive-td">iPhone X</td>
                                 <td>$ 999.00</td>
                                 <td>1</td>
                                 <td>$ 999.00</td>
+                                <td class="icon">More Product Details</td>
                             </tr>
                             <tr class="table-tr product-tr">
                                 <td>2020-09-29 95:57</td>
                                 <td>200398</td>
-                                <td>iPhone X 64Gb Grey</td>
+                                <td class="for-responsive">iPhone X 64Gb Grey</td>
+                                <td class="responsive-td">iPhone X</td>
                                 <td>$ 999.00</td>
                                 <td>1</td>
                                 <td>$ 999.00</td>
+                                <td class="icon">More Product Details</td>
                             </tr>
                         </tbody>
                     </table>
@@ -234,6 +258,7 @@
                 <div class="container listBox-mainDiv flex">
                     <div class="list-box">
                         <h6>For designers</h6>
+                        <img src="./images/downArrow.png" alt="down arrow">
                         <ul class="list-box-ul">
                             <li class="list-box-li">
                                 <a href="#" class="list-box-a">
@@ -279,6 +304,7 @@
                     </div>
                     <div class="list-box">
                         <h6>Hire designers</h6>
+                        <img src="./images/downArrow.png" alt="down arrow">
                         <ul class="list-box-ul">
                             <li class="list-box-li">
                                 <ul class="inside-box-ul">
@@ -313,6 +339,7 @@
                     </div>
                     <div class="list-box">
                         <h6>Company</h6>
+                        <img src="./images/downArrow.png" alt="down arrow">
                         <ul class="list-box-ul">
                             <li class="list-box-li">
                                 <a href="#" class="list-box-a">
@@ -363,6 +390,7 @@
                     </div>
                     <div class="list-box">
                         <h6>Directories</h6>
+                        <img src="./images/downArrow.png" alt="down arrow">
                         <ul class="list-box-ul">
                             <li class="list-box-li">
                                 <ul class="inside-box-ul">
@@ -413,17 +441,23 @@
                         <ul class="social-ul flex">
                             <li class="social-li">
                                 <a target="_blank" class="social-a" href="https://www.facebook.com/">
-                                    <img class="social-img" src="./images/facebook.png" alt="facebook icon">
+                                    <abbr title="Facebook">
+                                        <img class="social-img" src="./images/facebook.png" alt="facebook icon">
+                                    </abbr>
                                 </a>
                             </li>
                             <li class="social-li">
                                 <a target="_blank" class="social-a" href="https://www.instagram.com/">
-                                    <img class="social-img" src="./images/instagram.png" alt="instagram icon">
+                                    <abbr title="Instagram">
+                                        <img class="social-img" src="./images/instagram.png" alt="instagram icon">
+                                    </abbr>
                                 </a>
                             </li>
                             <li class="social-li last">
                                 <a target="_blank" class="social-a" href="https://twitter.com/">
-                                    <img class="social-img" src="./images/twitter.png" alt="twitter icon">
+                                    <abbr title="Twitter">
+                                        <img class="social-img" src="./images/twitter.png" alt="twitter icon">
+                                    </abbr>
                                 </a>
                             </li>
                         </ul>
