edif profile image display and add border.

--- a/secondPage.html
+++ b/secondPage.html
@@ -22,7 +22,7 @@
                 <div class="aside-nav-div">
                     <nav class="aside-nav">
                         <ul class="aside-nav-ul">
-                            <li class="aside-nav-li active">
+                            <li class="aside-nav-li">
                                 <a href="index.html" class="aside-nav-a">
                                     <img src="./images/homeIcon.png" alt="Home Icon">
                                     <h6>Home</h6>
@@ -124,7 +124,7 @@
                                 </li>
                                 <li class="nav-li">
                                     <a href="secondPage.html" class="nav-a">
-                                        <img src="./images/profilePhoto.png" alt="profile image">
+                                        <img class="profile-img profileImg-active" src="./images/prifileIcon.png" alt="profile image">
                                     </a>
                                 </li>
                                 <li class="nav-li last">
@@ -136,7 +136,7 @@
                         </ul>
                         <div class="profile-box">
                             <a href="secondPage.html">
-                                <img src="./images/profilePhoto.png" alt="profile image">
+                                <img class="profile-img profileImg-active" src="./images/prifileIcon.png" alt="profile image">
                             </a>
                         </div>
                         <div class="nav-burger">
